test/tests/stages/18_structures/invalid_parse/extra_credit/label_inside_struct_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  identifier(foo)
  :
  int
  identifier(j)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
